reverted pom.xml to previous state