@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>3.4</version>
+    <version>2.3</version>
   </parent>
 
   <properties>
@@ -11,9 +11,9 @@
         If your are using the Plugin Parent POM version 2.3 or later, just set the jenkins.version property to the version you need to depend on
         Source: https://wiki.jenkins-ci.org/display/JENKINS/Choosing+Jenkins+version+to+build+against
         -->
-        <!-- <jenkins.version>1.614</jenkins.version> -->
-        <jenkins.version>2.117</jenkins.version>
-        <jenkins-test-harness.version>2.37</jenkins-test-harness.version>
+        <jenkins.version>1.614</jenkins.version>
+        <hpi-plugin.version>1.115</hpi-plugin.version>
+        <jenkins-test-harness.version>${jenkins.version}</jenkins-test-harness.version>
         <findbugs.failOnError>false</findbugs.failOnError>
         <java.level>8</java.level>
   </properties>
@@ -91,13 +91,74 @@
 
   <build>
       <plugins>
-      <plugin>
-            <groupId>org.jenkins-ci.tools</groupId>
-            <artifactId>maven-hpi-plugin</artifactId>
-            <configuration>
-                <compatibleSinceVersion>2.18</compatibleSinceVersion>
-            </configuration>
+        <plugin>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>1.3</version>
         </plugin>
+        <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.2-beta-5</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>2.8</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.5.1</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.apache.maven.scm</groupId>
+              <artifactId>maven-scm-provider-gitexe</artifactId>
+              <version>1.9.2</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+		  <!--Java version configuration-->
+		  <configuration>
+			<source>1.${java.level}</source>
+			<target>1.${java.level}</target>
+		  </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.18.1</version>
+          <configuration>
+            <argLine>${argLine} -Xmx1024m -XX:MaxPermSize=512m</argLine>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.jenkins-ci.tools</groupId>
+          <artifactId>maven-hpi-plugin</artifactId>
+          <extensions>true</extensions>
+          <configuration>
+            <compatibleSinceVersion>1.4.0</compatibleSinceVersion>
+          </configuration>
+        </plugin>
+
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>animal-sniffer-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <signature>
+                <groupId>org.codehaus.mojo.signature</groupId>
+                <artifactId>java1${java.level}</artifactId>
+                <version>1.0</version>
+              </signature>
+            </configuration>
+          </plugin>
       </plugins>
   </build>
 
@@ -139,7 +200,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>job-dsl</artifactId>
-            <version>1.69</version>
+            <version>1.58</version>
             <optional>true</optional>
         </dependency>
 
@@ -159,7 +220,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>structs</artifactId>
-            <version>1.14</version>
+            <version>1.7</version>
             <optional>true</optional>
         </dependency>
         <dependency>
